# claude-powers

./: .gitignore  LICENSE  README.md  config.env  setup.sh
infra/: docker-compose.yaml  evermemos.env.template  soul-fabric.env.template  start-services.sh
scripts/: awaken.sh  guard-claude-process.sh  inject-time.sh  mcp-server.mjs  mcp-wrapper.sh  preserve.sh  recall-filter.py  situational-awareness.sh  sleep.sh
skills-export/browser-test/: SKILL.md
skills-export/cmx/: SKILL.md
skills-export/cmx/agents/: openai.yaml
skills-export/cmx/references/: README.md  capability-manifest.latest.md  capability-matrix.latest.md
skills-export/cmx/scripts/: build-matrix.sh  discover-all-capabilities.sh  generate-capability-matrix.py
skills-export/fxr/: SKILL.md
skills-export/fxr/agents/: openai.yaml
skills-export/fxr/references/: component-library-matrix.md  integration-orchestration.md  (+1 more)
skills-export/keybag/: SKILL.md
skills-export/masters-council/: SKILL.md
source/EverMemOS/: docker-compose.yaml
source/soul-memory-fabric/: CLAUDE.md  README.md  pyproject.toml
source/soul-memory-fabric/src/soul_fabric/: __init__.py  amem_evolution.py  api_models.py  atom.py  autotune.py  benchmark.py  catalog.py  config.py  langmem_rules.py  letta_blocks.py  memguard.py  models.py  planner.py  service.py  store.py  utils.py
source/soul-memory-fabric/src/soul_fabric/api/: routes.py
source/soul-memory-fabric/tests/: test_atom.py  test_memguard.py  test_service.py  test_store.py  test_store_guards.py
templates/: MEMORY.md  preferences.md  projects.md
(+18 files in other folders)
