[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-fabric"
version = "0.1.0"
description = "Soul Memory Fabric — 记忆控制平面"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Singularity Engine", email = "dev@sngxai.com" },
]
dependencies = [
    "pydantic>=2.0",
    "motor>=3.0",
    "loguru>=0.7",
    "httpx>=0.25",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mongomock-motor>=0.0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soul_fabric"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
